libs/pavex_macros/tests/config/fail/missing_key.rs
use pavex_macros::config;

#[config]
pub struct A;

fn main() {}
